# brave-search-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.darwin  Dockerfile.windows  Dockerfile.windows-arm64  Makefile  README.md  install.ps1
.github/: CODEOWNERS  renovate.json
.github/workflows/: build.yml
scripts/: install.ps1  install.sh
src/: api.rs  config.rs  main.rs  update.rs
src/update/: signature.rs
tests/: run.sh
