[package]
name = "brave-search-cli"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
description = "A token-efficient CLI for the Brave Search API, built for AI agents and LLMs"
license = "MPL-2.0"
repository = "https://github.com/brave/brave-search-cli"
homepage = "https://github.com/brave/brave-search-cli"
readme = "README.md"
keywords = ["brave", "search", "cli", "rag", "llm"]
categories = ["command-line-utilities", "web-programming"]

[workspace]

[[bin]]
name = "bx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
ureq = { version = "3.1.4", default-features = false, features = ["rustls"] }
serde_json = "1.0.149"
dirs = "6.0.0"
urlencoding = "2.1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
